test/bad/function_declaration_03.mpp
fun f(x):int { return 0; }
